<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.mpgtracker.InstructionsActivity">

    <RelativeLayout
        android:layout_width="390dp"
        android:layout_height="600dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/txtTitleInstructions"
            android:textColor="#7F0000"
            android:textSize="45sp"
            tools:text="@string/txtTitle"
            android:layout_alignTop="@+id/imgLogo"
            android:layout_toRightOf="@+id/imgLogo"
            android:layout_toEndOf="@+id/imgLogo" />

        <TextView
            android:id="@+id/txtFullInstructions"
            android:layout_width="393dp"
            android:layout_height="390dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imgLogo"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtFullInstructions"
            android:textSize="20sp"
            tools:text="@string/txtFullInstructions" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txtFullInstructions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/txtReturn"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="514dp"
            tools:text="@string/txtReturn" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
